:tada: fixing overflows

--- a/Styles/@media.css
+++ b/Styles/@media.css
@@ -12,8 +12,7 @@
   #hero{
     display: flex;
     flex-direction: column-reverse;
-    padding: 1rem 2.5rem;
-    overflow: unset;
+    padding: 1rem 2.5rem 3rem;
     gap: 3rem;
     
     & h1{
